--- a/src/components/preview/preview.css
+++ b/src/components/preview/preview.css
@@ -1,14 +1,15 @@
 .preview-wrapper {
     position: relative;
     height: 100%;
+    flex-grow: 1;
 }
 
 .preview-wrapper iframe {
     height: 100%;
-    background-color: white;
+    width: 100%;
 }
 
-.react-draggable-transparent-selector .preview-wrapper:after {
+.react-draggable-transparent-selection .preview-wrapper:after {
     content: '';
     position: absolute;
     top: 0;
